--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/wite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UEF's Research Profile</title>
     <style>
@@ -16,6 +16,12 @@
         margin: 0
       }
     </style>
+    <script src="/skin/script.js" type="text/javascript"></script>
+    <script src="/scripts/application-4883631f598d94c7f2d3edfb226db950.js" type="text/javascript"></script>
+    <script src="//assets.adobedtm.com/4a848ae9611a/ea83f870454d/launch-af020409b299.min.js" async=""></script>
+    <script src="https://assets.adobedtm.com/extensions/EPb56e12d7054b4acea984e91c910051cc/AppMeasurement.min.js" async=""></script>
+    <script id="altmetric-embed-js" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/altmetric_badges-2f3c1a827c4dee5fa0ff35ec229b9204ae106583cc99636c724152d1f7acea04.js"></script>
+    <script src="https://assets.adobedtm.com/4a848ae9611a/ea83f870454d/3c020d0f09f6/RC8babc67f7883443b83a92fe8b2a220ee-source.min.js" async=""></script>
   </head>
   <body class="webkit">
     <div id="root"></div>
